fix: update title text effects for higher contrast

--- a/src/assets/css/global/blocks/textgradient.css
+++ b/src/assets/css/global/blocks/textgradient.css
@@ -8,7 +8,7 @@
 
 .gradient-text-linear {
   color: transparent;
-  background-image: var(--gradient-rainbow);
+  background-image: var(--gradient-modern);
   background-size: 100%;
   background-repeat: repeat;
   background-clip: text;
