--- a/src/assets/css/local/blog.css
+++ b/src/assets/css/local/blog.css
@@ -1,4 +1,4 @@
 .blog-header {
-  background-image: var(--gradient-stripes2);
+  background-image: var(--gradient-modern-subdued);
   opacity: 0.9;
 }
